--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push emmanuelnwokoma/udagram-api-feed
-  - docker push emmanuelnwokoma/udagram-api-users
-  - docker push emmanuelnwokoma/udagram-frontend
-  - docker push emmanuelnwokoma/udagram-reverse-proxy
+  - docker push emmanuelnwokoma/udagram-api-feed:v1
+  - docker push emmanuelnwokoma/udagram-api-users:v1
+  - docker push emmanuelnwokoma/udagram-frontend:v1
+  - docker push emmanuelnwokoma/udagram-reverse-proxy:v1
